--- a/web/public/scratchjr/home.html
+++ b/web/public/scratchjr/home.html
@@ -4,7 +4,8 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta http-equiv="cache-control" content="no-cache">
 <meta charset="utf-8">
-<dir="rtl">
+<meta dir="rtl">  
+
 <head>
 <title>Scratch Jr</title>
 
