--- a/web/public/scratchjr/home.html
+++ b/web/public/scratchjr/home.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="app.bundle.js"></script>
 
 </head>
-<body dir="rtl">
+<body>
 <div class="frame" id="frame">
 	<div class="topbar" id="topbar">
 		<ul class="topbar-nav" id="nav">
