--- a/web/public/scratchjr/home.html
+++ b/web/public/scratchjr/home.html
@@ -54,7 +54,7 @@
 			<span id="subtitle"></span>
 		</div>
 	</div>
-	<div class="contentwrap" id="wrapc"></div>
+<div class="contentwrap" id="wrapc" dir="rtl"></div>
 	<div class="footer off" id="footer">
 		<ul class="footer-nav" id="footernav">
 			<li class="tab" id="abouttab" >
