--- a/web/public/scratchjr/inapp/about.html
+++ b/web/public/scratchjr/inapp/about.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="../app.bundle.js"></script>
 
 </head>
-<body>
+<body dir="rtl>
 <h1 id="aboutScratchjrTitle"></h1>
 <div class="about-section-wrapper">
 <h2 class="title" id="aboutWhatIs"></h2>
