--- a/web/public/scratchjr/inapp/interface.html
+++ b/web/public/scratchjr/inapp/interface.html
@@ -7,7 +7,7 @@
     </script>
     <script type="text/javascript" src="../app.bundle.js"></script>
   </head>
-  <body>
+  <body dir="rtl">
     <div id="content">
       <div id="content-buffer">
       </div>
