--- a/web/public/scratchjr/inapp/blocks.html
+++ b/web/public/scratchjr/inapp/blocks.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="../app.bundle.js"></script>
   </head>
 
-  <body dir="rtl">
+   <body dir="rtl" style="margin-right: 42px">
     <div id="content">
       <div id="ipad-project-view-wrapper">
         <div class="learn-tab learn-blocks">
