--- a/web/public/scratchjr/inapp/blocks.html
+++ b/web/public/scratchjr/inapp/blocks.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="../app.bundle.js"></script>
   </head>
 
-   <body dir="rtl" style="margin-right: 82px">
+    <body dir="rtl" style="margin-right: 121px; margin-left: 120px;">
     <div id="content">
       <div id="ipad-project-view-wrapper">
         <div class="learn-tab learn-blocks">
